--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   height: 80px;
 }
 
+.App-logo-evolveu {
+  animation: App-logo-evolveu infinite 5s linear;
+  height: 80px;
+}
+
 .App-header {
   background-color: #222;
   height: 150px;
@@ -25,4 +30,10 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+
+@keyframes App-logo-evolveu {
+  from { transform: rotate(350deg); }
+  to { transform: rotate(030deg); }
 }
