--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-logo-evolveu {
-  animation: App-logo-evolveu infinite 5s linear;
+  animation: App-logo-evolveu infinite 25s linear;
   height: 80px;
 }
 
@@ -34,6 +34,25 @@
 
 
 @keyframes App-logo-evolveu {
-  from { transform: rotate(350deg); }
-  to { transform: rotate(030deg); }
+  0% { transform: rotate(10deg); }
+  50% { transform: rotate(-10deg); }
+  100% { transform: rotate(10deg); }
+}
+
+.button {
+    background-color: #97c444; /* Green */
+    border: none;
+    color: white;
+    padding: 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 1px;
+    cursor: pointer;
+    border-radius: 34px;
+}
+
+.header {
+  color: #42a0bc;
 }
