Add tech,soft,remove questions from db, timer

--- a/src/components/questions/questions.css
+++ b/src/components/questions/questions.css
@@ -16,6 +16,15 @@ table {
 	padding: 15px;
 }
 
+#Competency {
+	max-width: 50%;
+	margin: auto;
+	margin-top: 30px;
+	padding: 20px;
+	border: 2px solid blue;
+	border-radius: 5px;
+}
+
 .lfslfs {
 	outline-style: solid;
 }
