--- a/src/components/questions/questions.css
+++ b/src/components/questions/questions.css
@@ -1,30 +1,34 @@
 .right {
-	text-align: right;
+    text-align: right;
 }
 
 table {
-	display: flex;
-	align-items: center;
-	max-width: 90%;
-	border-spacing: 10px;
+    display: flex;
+    align-items: center;
+    max-width: 90%;
+    border-spacing: 10px;
 }
 
 .questions {
-	/*outline-style: solid;*/
-	max-width: 90%;
-	margin: auto;
-	padding: 15px;
+    /*outline-style: solid;*/
+    max-width: 90%;
+    margin: auto;
+    padding: 15px;
 }
 
 #Competency {
-	max-width: 50%;
-	margin: auto;
-	margin-top: 30px;
-	padding: 20px;
-	border: 2px solid blue;
-	border-radius: 5px;
+    max-width: 50%;
+    margin: auto;
+    margin-top: 30px;
+    padding: 20px;
+    border: 2px solid blue;
+    border-radius: 5px;
 }
 
 .lfslfs {
-	outline-style: solid;
+    outline-style: solid;
+}
+
+.boxs {
+    border: 2px solid blue;
 }
